--- a/package.json
+++ b/package.json
@@ -4,11 +4,32 @@
   "description": "Tailwind CSS plugin to add utilities for outline css properties",
   "main": "index.js",
   "scripts": {
+    "build": "node tools/build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tim Case",
   "license": "MIT",
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
+  },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "babel-cli": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
+    "del": "^5.1.0",
+    "rollup": "^2.7.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.9.2"
   }
 }
