--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tailwindcss-outline",
   "version": "0.0.1",
   "description": "Tailwind CSS plugin to add utilities for outline css properties",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "node tools/build",
     "test": "echo \"Error: no test specified\" && exit 1"
