--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
-    "babel-cli": "^6.18.0",
     "babel-preset-latest": "^6.24.1",
     "del": "^5.1.0",
     "rollup": "^2.7.2",
@@ -31,6 +30,7 @@
     "tailwindcss": "^2.1.2"
   },
   "dependencies": {
+    "@babel/cli": "^7.14.3",
     "@babel/runtime": "^7.9.2",
     "lodash": "^4.17.19"
   }
